Commit al master en su version mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
-    <h1>Titulo del blog</h1>
-    <p>Primer parrafo del blogpost</p>
+    <div id="container">
+        <div id="post">
+            <h1>Este es un titulo mas interesante para el POST</h1>
+            <p>Y este es el parrafo donde vamos a iniciar con el post tan increible</p>
+        </div>
+    </div>
 </body>
 </html>
