Estructura inicial de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">Cabecera</div>
         <div id="post">
             <h1>Este es un titulo mas interesante para el POST</h1>
             <p>Y este es el parrafo donde vamos a iniciar con el post tan increible</p>
