--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,7 @@
         <div id="post">
             <h1>Este es un titulo mas interesante para el POST</h1>
             <p>Y este es el parrafo donde vamos a iniciar con el post tan increible</p>
+            <p>Los blogs son la mejor forma de compartir contenido en internet</p>
         </div>
     </div>
 </body>
