Cambios al commit de cabecera, texto negro

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Esto es un blogpost</title>
+    <title>Esto es un blogpost de CABECERA</title>
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
